--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
+    "lenis": "^1.3.15",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "framer-motion": "^12.23.24"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
